# discord-avatar-api

./: .envrc  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
src/: config.rs  fetch_user.rs  lib.rs  main.rs  metrics.rs  request_id.rs  routes.rs  state.rs
