[package]
name = "discord-avatar-api"
version = "0.1.0"
edition = "2021"
authors = ["Carter Himmel <me@fyko.net>"]
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
tokio = { version = "1.34.0", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync",
  "signal",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
  "fmt",
  "env-filter",
  "json",
] }
reqwest = { version = "0.11.22", features = [
  "rustls-tls-webpki-roots",
  "json",
] }
envy = "0.4.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.4.4", features = [
  "tracing",
  "trace",
  "request-id",
  "compression-full",
] }
tower = { version = "0.4.13", features = ["tracing", "timeout"] }
http = "0.2.11"
tower_governor = { version = "0.1.0", features = ["tracing"] }
twilight-http = { version = "0.15.4", features = ["rustls-native-roots"] }
twilight-model = "0.15.4"
regex = "1.10.2"
metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"
lazy_static = "1.4.0"
indoc = "2.0.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
